--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 body > * {
-    flex: 1;
+    padding: 0 5rem;
 }
 
 header {
@@ -15,6 +15,13 @@ header {
     align-items: center;
     flex-grow: 0;
     flex-basis: 50px;
+    background: #1F2937;
+    color: #E5E7EB;
+}
+
+header a {
+    color: #F9FAF8;
+    font-size: 24px;
 }
 
 .nav-list ul {
@@ -23,22 +30,74 @@ header {
     list-style: none;
 }
 
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
 section {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #1F2937;
+    color: #E5E7EB;
 }
 
 .intro {
     flex:0 1 375px;
 }
 
+section img {
+    width: 150px;
+    height: auto;
+}
+
+h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+h2 {
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
+.card-display h2 {
+    text-align: center;
+}
+
 .card-layout {
     display: flex;
+    justify-content: space-evenly;
     gap: 15px;
 }
 
-.sign-up {
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card img {
+    width: 200px;
+    height: 200px;
+}
+
+.card-text {
+    padding: 2rem;
+}
+
+.statement {
+    background: #E5E7EB;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.call-to-action {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -50,8 +109,7 @@ footer {
     flex-basis: 50px;
     align-items: center;
     justify-content: center;
-}
-
-footer div {
-    
+    background: #1F2937;
+    color: #E5E7EB;
+    font-size: 18px;
 }
